gcc/testsuite/rust/rustc/ui/consts/issue-52023-array-size-pointer-cast.rs
fn main() {
    let _ = [0; (&0 as *const i32) as usize]; // { dg-error "" "" { target *-*-* } }
}

